--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
       border: 1px solid rgba(255,255,255,0.04);
     }
     .link-btn svg { width: 20px; height: 20px; flex-shrink: 0; }
+    .links-category { margin-top: 1rem; }
+    .links-category h3 { margin: 0 0 0.5rem 0; color: var(--accent); }
+    .profile-card { display:flex; align-items:center; gap:1rem; padding:0.8rem; border-radius:10px; background: rgba(255,255,255,0.02); margin-bottom:1rem }
+    .profile-card img { width:64px; height:64px; border-radius:50%; border:2px solid var(--accent) }
+    .connect-list { display:flex; gap:0.6rem; flex-wrap:wrap }
+    .connect-item { display:inline-flex; align-items:center; gap:0.5rem; padding:0.45rem 0.7rem; border-radius:8px; background: rgba(255,255,255,0.02); border:1px solid rgba(255,255,255,0.03); text-decoration:none; color:var(--text) }
+    .connect-item svg { width:18px; height:18px }
   </style>
 </head>
 
@@ -255,86 +262,86 @@
 
 <section id="social">
   <h2>Connect</h2>
-  <p>
-    <a href="https://github.com/harsh1991mishra" target="_blank">GitHub</a> |
-    <a href="#">LinkedIn</a> |
-    <a href="#">Twitter/X</a> |
-    <a href="mailto:harsh1991mishra@gmail.com">Email</a>
-  </p>
+  <div class="card">
+    <div class="connect-list">
+      <a class="connect-item" href="https://github.com/harsh1991mishra" target="_blank" rel="noopener noreferrer">
+        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M12 .5C5.73.5.76 5.47.76 11.74c0 4.95 3.2 9.15 7.64 10.63.56.1.77-.24.77-.53 0-.26-.01-1-.02-1.96-3.11.68-3.77-1.5-3.77-1.5-.51-1.3-1.25-1.65-1.25-1.65-1.02-.7.08-.69.08-.69 1.12.08 1.71 1.15 1.71 1.15 1 .17 1.56.99 1.56.99.93 1.6 2.44 1.14 3.04.87.09-.68.36-1.14.65-1.4-2.48-.28-5.09-1.24-5.09-5.5 0-1.21.43-2.2 1.13-2.98-.11-.28-.49-1.4.11-2.92 0 0 .92-.29 3.02 1.13a10.4 10.4 0 0 1 2.75-.37c.93 0 1.87.12 2.75.37 2.09-1.42 3.01-1.13 3.01-1.13.6 1.52.22 2.64.11 2.92.7.78 1.13 1.77 1.13 2.98 0 4.27-2.62 5.22-5.11 5.5.37.32.7.95.7 1.92 0 1.39-.01 2.51-.01 2.85 0 .29.2.64.78.53C19.04 20.88 22.26 16.68 22.26 11.74 22.26 5.47 17.29.5 12 .5z"/></svg>
+        <span>GitHub</span>
+      </a>
+      <a class="connect-item" href="https://www.linkedin.com/in/harsh1991mishra" target="_blank" rel="noopener noreferrer">
+        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M4.98 3.5C4.98 5 3.82 6.18 2.3 6.18 0.78 6.18-.38 5-.38 3.5-.38 2 0.78.82 2.3.82c1.52 0 2.68 1.18 2.68 2.68zM.5 8.5h3.6V24H.5V8.5zM8.5 8.5h3.45v2.08h.05c.48-.9 1.66-1.85 3.42-1.85 3.66 0 4.33 2.41 4.33 5.55V24h-3.6v-7.25c0-1.73-.03-3.95-2.41-3.95-2.41 0-2.78 1.88-2.78 3.82V24H8.5V8.5z"/></svg>
+        <span>LinkedIn</span>
+      </a>
+      <a class="connect-item" href="https://x.com/harsh1991mishra" target="_blank" rel="noopener noreferrer">
+        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M22 5.92c-.63.28-1.3.48-2 .57.72-.43 1.28-1.11 1.54-1.92-.67.4-1.42.69-2.22.85C18.97 4.7 17.98 4.5 16.9 4.5c-1.9 0-3.44 1.54-3.44 3.44 0 .27.03.54.09.8-2.86-.14-5.4-1.51-7.1-3.6-.3.51-.47 1.11-.47 1.75 0 1.2.61 2.26 1.53 2.88-.57-.02-1.1-.18-1.56-.43v.04c0 1.68 1.19 3.08 2.77 3.4-.29.08-.6.12-.92.12-.23 0-.46-.02-.68-.06.46 1.43 1.78 2.47 3.35 2.5-1.23.96-2.77 1.53-4.45 1.53-.29 0-.57-.02-.85-.05 1.6 1.02 3.5 1.62 5.55 1.62 6.66 0 10.31-5.51 10.31-10.31v-.47c.71-.5 1.32-1.12 1.81-1.82-.65.29-1.36.49-2.09.58.75-.45 1.32-1.16 1.59-2.01z"/></svg>
+        <span>X</span>
+      </a>
+      <a class="connect-item" href="mailto:harsh1991mishra@gmail.com">
+        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"/></svg>
+        <span>Email</span>
+      </a>
+      <a class="connect-item" href="https://t.me/harsh1991mishra" target="_blank" rel="noopener noreferrer">
+        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M12 .5C5.73.5.76 5.47.76 11.74c0 4.95 3.2 9.15 7.64 10.63.56.1.77-.24.77-.53 0-.26-.01-1-.02-1.96-3.11.68-3.77-1.5-3.77-1.5-.51-1.3-1.25-1.65-1.25-1.65-1.02-.7.08-.69.08-.69 1.12.08 1.71 1.15 1.71 1.15 1 .17 1.56.99 1.56.99.93 1.6 2.44 1.14 3.04.87.09-.68.36-1.14.65-1.4-2.48-.28-5.09-1.24-5.09-5.5 0-1.21.43-2.2 1.13-2.98-.11-.28-.49-1.4.11-2.92 0 0 .92-.29 3.02 1.13a10.4 10.4 0 0 1 2.75-.37c.93 0 1.87.12 2.75.37 2.09-1.42 3.01-1.13 3.01-1.13.6 1.52.22 2.64.11 2.92.7.78 1.13 1.77 1.13 2.98 0 4.27-2.62 5.22-5.11 5.5.37.32.7.95.7 1.92 0 1.39-.01 2.51-.01 2.85 0 .29.2.64.78.53C19.04 20.88 22.26 16.68 22.26 11.74 22.26 5.47 17.29.5 12 .5z"/></svg>
+        <span>Telegram</span>
+      </a>
+    </div>
+  </div>
 </section>
 
 <section id="links">
   <h2>Links</h2>
   <div class="card">
-    <div class="links-grid">
-      <a class="link-btn" href="https://github.com/harsh1991mishra" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>GitHub</span>
-      </a>
-      <a class="link-btn" href="https://www.linkedin.com/in/harsh1991mishra" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>LinkedIn</span>
-      </a>
-      <a class="link-btn" href="https://www.youtube.com/channel/UClGdvD1-3gcgHhO0IZrv1Lw" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>YouTube</span>
-      </a>
-      <a class="link-btn" href="https://www.instagram.com/jai_sri_mahakaal_1008/" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>Instagram</span>
-      </a>
-      <a class="link-btn" href="https://t.me/harsh1991mishra" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>Telegram</span>
-      </a>
-      <a class="link-btn" href="https://harsh1991mishra.beehiiv.com/subscribe" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>Newsletter</span>
-      </a>
-      <a class="link-btn" href="https://about.me/harsh1991mishra" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>About.me</span>
-      </a>
-      <a class="link-btn" href="https://www.coursera.org/learner/harsh1991mishra" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>Coursera</span>
-      </a>
-      <a class="link-btn" href="https://g.dev/harsh1991mishra" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>Google Dev</span>
-      </a>
-      <a class="link-btn" href="https://harsh1991mishra.flutin.com/" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>Flutin Live</span>
-      </a>
-      <a class="link-btn" href="https://www.patreon.com/harsh1991mishra" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>Patreon</span>
-      </a>
-      <a class="link-btn" href="http://pph.me/harsh1991mishra" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>PeoplePerHour</span>
-      </a>
-      <a class="link-btn" href="https://rarible.com/harsh1991mishra" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>Rarible</span>
-      </a>
-      <a class="link-btn" href="https://harsh1991mishra.wixsite.com/portfolio" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>Wix Portfolio</span>
-      </a>
-      <a class="link-btn" href="https://www.behance.net/harsh1991mishra" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>Behance</span>
-      </a>
-      <a class="link-btn" href="https://x.com/harsh1991mishra" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>X</span>
-      </a>
-      <a class="link-btn" href="mailto:harsh1991mishra@gmail.com" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 14L21 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 21H3V3h7" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>Email</span>
-      </a>
+    <a href="https://linktr.ee/harsh1991mishra" target="_blank" rel="noopener noreferrer" class="profile-card">
+      <img src="https://avatars.githubusercontent.com/u/93046472?s=400&u=c73c07e9d4c5a0737fd6a9e61edb8b1fc771f314&v=4" alt="Harsh Mishra">
+      <div>
+        <strong>Harsh Mishra</strong>
+        <div style="font-size:0.9rem; opacity:0.85">Click to view Linktree & connect</div>
+      </div>
+    </a>
+
+    <div class="links-category">
+      <h3>Social</h3>
+      <div class="links-grid">
+        <a class="link-btn" href="https://github.com/harsh1991mishra" target="_blank" rel="noopener noreferrer"><svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M12 .5C5.73.5.76 5.47.76 11.74c0 4.95 3.2 9.15 7.64 10.63.56.1.77-.24.77-.53 0-.26-.01-1-.02-1.96-3.11.68-3.77-1.5-3.77-1.5-.51-1.3-1.25-1.65-1.25-1.65-1.02-.7.08-.69.08-.69 1.12.08 1.71 1.15 1.71 1.15 1 .17 1.56.99 1.56.99.93 1.6 2.44 1.14 3.04.87.09-.68.36-1.14.65-1.4-2.48-.28-5.09-1.24-5.09-5.5 0-1.21.43-2.2 1.13-2.98-.11-.28-.49-1.4.11-2.92 0 0 .92-.29 3.02 1.13a10.4 10.4 0 0 1 2.75-.37c.93 0 1.87.12 2.75.37 2.09-1.42 3.01-1.13 3.01-1.13.6 1.52.22 2.64.11 2.92.7.78 1.13 1.77 1.13 2.98 0 4.27-2.62 5.22-5.11 5.5.37.32.7.95.7 1.92 0 1.39-.01 2.51-.01 2.85 0 .29.2.64.78.53C19.04 20.88 22.26 16.68 22.26 11.74 22.26 5.47 17.29.5 12 .5z"/></svg> GitHub</a>
+        <a class="link-btn" href="https://x.com/harsh1991mishra" target="_blank" rel="noopener noreferrer"><svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M22 5.92c-.63.28-1.3.48-2 .57.72-.43 1.28-1.11 1.54-1.92-.67.4-1.42.69-2.22.85C18.97 4.7 17.98 4.5 16.9 4.5c-1.9 0-3.44 1.54-3.44 3.44 0 .27.03.54.09.8-2.86-.14-5.4-1.51-7.1-3.6-.3.51-.47 1.11-.47 1.75 0 1.2.61 2.26 1.53 2.88-.57-.02-1.1-.18-1.56-.43v.04c0 1.68 1.19 3.08 2.77 3.4-.29.08-.6.12-.92.12-.23 0-.46-.02-.68-.06.46 1.43 1.78 2.47 3.35 2.5-1.23.96-2.77 1.53-4.45 1.53-.29 0-.57-.02-.85-.05 1.6 1.02 3.5 1.62 5.55 1.62 6.66 0 10.31-5.51 10.31-10.31v-.47c.71-.5 1.32-1.12 1.81-1.82-.65.29-1.36.49-2.09.58.75-.45 1.32-1.16 1.59-2.01z"/></svg> X</a>
+        <a class="link-btn" href="https://www.instagram.com/jai_sri_mahakaal_1008/" target="_blank" rel="noopener noreferrer"><svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm5 6.5A4.5 4.5 0 1 0 16.5 13 4.5 4.5 0 0 0 12 8.5zm6.5-3a1.2 1.2 0 1 0 1.2 1.2A1.2 1.2 0 0 0 18.5 5.5z"/></svg> Instagram</a>
+      </div>
+    </div>
+
+    <div class="links-category">
+      <h3>Work & Portfolio</h3>
+      <div class="links-grid">
+        <a class="link-btn" href="https://harsh1991mishra.wixsite.com/portfolio" target="_blank" rel="noopener noreferrer">Wix Portfolio</a>
+        <a class="link-btn" href="https://www.behance.net/harsh1991mishra" target="_blank" rel="noopener noreferrer">Behance</a>
+        <a class="link-btn" href="https://harsh1991mishra.crevado.com/" target="_blank" rel="noopener noreferrer">Crevado</a>
+      </div>
+    </div>
+
+    <div class="links-category">
+      <h3>Learning & Newsletter</h3>
+      <div class="links-grid">
+        <a class="link-btn" href="https://www.coursera.org/learner/harsh1991mishra" target="_blank" rel="noopener noreferrer">Coursera</a>
+        <a class="link-btn" href="https://harsh1991mishra.beehiiv.com/subscribe" target="_blank" rel="noopener noreferrer">Newsletter</a>
+        <a class="link-btn" href="https://g.dev/harsh1991mishra" target="_blank" rel="noopener noreferrer">Google Developer</a>
+      </div>
+    </div>
+
+    <div class="links-category">
+      <h3>Marketplaces & Support</h3>
+      <div class="links-grid">
+        <a class="link-btn" href="https://www.patreon.com/harsh1991mishra" target="_blank" rel="noopener noreferrer">Patreon</a>
+        <a class="link-btn" href="https://rarible.com/harsh1991mishra" target="_blank" rel="noopener noreferrer">Rarible</a>
+        <a class="link-btn" href="http://pph.me/harsh1991mishra" target="_blank" rel="noopener noreferrer">PeoplePerHour</a>
+      </div>
+    </div>
+
+    <div class="links-category">
+      <h3>Contact</h3>
+      <div class="links-grid">
+        <a class="link-btn" href="mailto:harsh1991mishra@gmail.com">Email</a>
+        <a class="link-btn" href="https://api.whatsapp.com/send?phone=918445744581" target="_blank" rel="noopener noreferrer">WhatsApp</a>
+        <a class="link-btn" href="https://t.me/harsh1991mishra" target="_blank" rel="noopener noreferrer">Telegram</a>
+      </div>
     </div>
   </div>
 </section>
