Add Projects section showing GitHub repositories with brief descriptions

--- a/index.html
+++ b/index.html
@@ -226,13 +226,55 @@
   <h2>Projects</h2>
   <div class="grid">
     <div class="card">
-      <h3>HR / Business Analytics Dashboard – Power BI</h3>
-      <p>Interactive dashboards for KPI tracking, trends, and HR insights using Excel data sources.</p>
+      <h3><a href="https://github.com/harsh1991mishra/harsh1991mishra.github.io" target="_blank" rel="noopener noreferrer">harsh1991mishra.github.io</a></h3>
+      <p>Personal website and portfolio. Primary language: HTML. Last updated: 2026-02-02.</p>
     </div>
+
     <div class="card">
-      <h3>Advanced Excel MIS Reporting</h3>
-      <p>Automated MIS reports using Pivot Tables and Power Query, reducing manual effort.</p>
+      <h3><a href="https://github.com/harsh1991mishra/DAZI-AI" target="_blank" rel="noopener noreferrer">DAZI-AI</a></h3>
+      <p>No description provided. Public repository (fork). Last pushed: 2026-01-30.</p>
     </div>
+
+    <div class="card">
+      <h3><a href="https://github.com/harsh1991mishra/StackChan" target="_blank" rel="noopener noreferrer">StackChan</a></h3>
+      <p>StackChan open source! Last pushed: 2026-01-08.</p>
+    </div>
+
+    <div class="card">
+      <h3><a href="https://github.com/harsh1991mishra/Telegram_Bot" target="_blank" rel="noopener noreferrer">Telegram_Bot</a></h3>
+      <p>Telegram_Bot project. Last pushed: 2025-07-05.</p>
+    </div>
+
+    <div class="card">
+      <h3><a href="https://github.com/harsh1991mishra/termux" target="_blank" rel="noopener noreferrer">termux</a></h3>
+      <p>Termux-related utilities and scripts. Last pushed: 2022-12-24.</p>
+    </div>
+
+    <div class="card">
+      <h3><a href="https://github.com/harsh1991mishra/toddlerbot" target="_blank" rel="noopener noreferrer">toddlerbot</a></h3>
+      <p>Forked project with robotics/control code. Last pushed: 2026-01-09.</p>
+    </div>
+
+    <div class="card">
+      <h3><a href="https://github.com/harsh1991mishra/oh-distro" target="_blank" rel="noopener noreferrer">oh-distro</a></h3>
+      <p>An integrated humanoid control, planning and perception system (MIT / Edinburgh). Last pushed: 2018-03-06.</p>
+    </div>
+
+    <div class="card">
+      <h3><a href="https://github.com/harsh1991mishra/Berkeley-Humanoid-Lite" target="_blank" rel="noopener noreferrer">Berkeley-Humanoid-Lite</a></h3>
+      <p>Codebase for Berkeley Humanoid Lite. Homepage: <a href="https://lite.berkeley-humanoid.org/" target="_blank" rel="noopener noreferrer">lite.berkeley-humanoid.org</a>. Last pushed: 2025-09-11.</p>
+    </div>
+
+    <div class="card">
+      <h3><a href="https://github.com/harsh1991mishra/esp32s3_oled_dasai_mochi" target="_blank" rel="noopener noreferrer">esp32s3_oled_dasai_mochi</a></h3>
+      <p>Hardware project: Make your own Dasai Mochi with Seeed Xiao ESP32S3 and SSD1306 OLED. Last pushed: 2025-03-25.</p>
+    </div>
+
+    <div class="card">
+      <h3><a href="https://github.com/harsh1991mishra/crowpanel_AI_assistant" target="_blank" rel="noopener noreferrer">crowpanel_AI_assistant</a></h3>
+      <p>No description provided. AI assistant related repo (fork). Last pushed: 2025-08-04.</p>
+    </div>
+
   </div>
 </section>
 
